--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,3 +22,11 @@
 /** Подключение стилей отдельных блоков и секций */
 @import 'components/header';
 @import 'components/footer';
+@import 'components/hero';
+@import 'components/advantages';
+@import 'components/calculator';
+@import 'components/video';
+@import 'components/studios';
+@import 'components/promo';
+@import 'components/benefits';
+@import 'components/feedback';
