--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,10 +1,65 @@
-
 .header {
-    background-color: palevioletred;
-    min-height: 150vh;
-    //@include mainGradient();
+    min-height: 110px;
+    &__wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 10;
+        background: $bgGradient;
+    }
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 25px 15px;
+    }
+    &__logo {}
+    &__menu {
+        
+    }
+    &__burger-button {
+        display: none;
+    }
+    &__button {
+        padding: 15px 20px;
+        font-size: 20px;
+        font-weight: 500;
+    }
 }
+.container {
+}
+.logo {
+}
+.menu {
+    flex-grow: 1;
+    &__list {
+        display: flex;
+        justify-content: center;
+        padding: 0 20px;
+        margin: 0;
+        gap: 65px;
 
-.wrapper {
-    width: 300px;
+        list-style: none;
+    }
+    &__elem {
+
+    }
+    &__link {
+        color: $black;
+        text-decoration: none;
+
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+
+        background: none;
+        -webkit-text-fill-color: unset;
+    }
+}
+.gradient-button {
+    &__text {}
+}
+.burger-button {
+    &__line {}
 }
