--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-family: 'TildaSans', sans-serif;
     font-weight: 400;
@@ -5,6 +9,22 @@ html {
     color: $black;
 }
 
-a {
-    @include textGradient($mainGradient);
+html, body {
+    overflow-x: hidden;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main {
+    flex-grow: 1;
+}
+
+.container {
+    max-width: 1800px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
