--- a/src/scss/config/mixins.scss
+++ b/src/scss/config/mixins.scss
@@ -28,8 +28,26 @@
 
 @mixin mainGradient() {
   background: $mainGradient;
-  background-size: 200% 200%;
+}
+
+@mixin animationGradientBackground() {
+  overflow: hidden;
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    transition: .6s;
+    @include mainGradient();
+  }
   &:hover {
-    background-position: 100% 0;
+    &::before {
+      bottom: 0;
+      border-radius: 0;
+    }
   }
 }
