--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -7,4 +7,5 @@ $blue: #0091D7;
 $pink: #FE0FD4;
 $white: #FFFFFF;
 
-$mainGradient: linear-gradient(90deg, $blue 0%, $pink 50%, $blue 100%);
+$mainGradient: linear-gradient(90deg, $blue 0%, $pink 100%);
+$bgGradient: linear-gradient(90deg, #FEEDF3 0%, #EFE7F3 100%);
