--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -8,4 +8,5 @@ $pink: #FE0FD4;
 $white: #FFFFFF;
 
 $mainGradient: linear-gradient(90deg, $blue 0%, $pink 100%);
+$mainGradientReverse: linear-gradient(270deg, $blue 0%, $pink 100%);
 $bgGradient: linear-gradient(90deg, #FEEDF3 0%, #EFE7F3 100%);
