--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 
 /** Подключение переменных */
 @import 'config/vars';
+@import 'config/keyframes';
 
 /** Подключение sass function и mixins и extends стилей */
 @import 'config/functions';
