--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,4 +1,22 @@
 .footer {
-    background-color: aquamarine;
-    min-height: 200px;
+    margin-top: 100px;
+    padding-bottom: 60px;
+    &_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+
+        text-align: center;
+    }
+    &__logo {}
+    &__menu {}
+    &__text {
+        margin: 0;
+
+        font-size: 24px;
+        color: #4D4D4D;
+        font-weight: 500;
+    }
+    &__link {}
 }
