--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -57,6 +57,23 @@ body {
 
 a {
     @include textGradient($mainGradient);
+    font-weight: bold;
+    text-decoration: underline;
+    position: relative;
+    cursor: pointer;
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 0;
+        height: 2px;
+        transition: .3s;
+        background: $mainGradient;
+    }
+    &:hover::before {
+        width: 100%;
+    }
 }
 
 .section-title {
@@ -68,4 +85,28 @@ a {
 
 .dot {
     color: $pink;
+}
+
+.input {
+    background-color: #F2F2F2;
+    font-size: 24px;
+    font-weight: 500;
+
+    border: none;
+    border-radius: 8px;
+    position: relative;
+
+    padding: 30px 25px;
+    width: 100%;
+
+    transition: .3s;
+
+    &__wrapper {
+        border-radius: 10px;
+        @include borderGradient(1);
+    }
+
+    &:focus {
+        text-indent: 5px;
+    }
 }
