--- a/src/scss/components/feedback.scss
+++ b/src/scss/components/feedback.scss
@@ -4,7 +4,7 @@
         display: flex;
     }
     &__left {
-        flex: 0 0 1100px;
+        flex: 1 1 1100px;
         position: relative;
         overflow: hidden;
         padding: 80px;
@@ -55,24 +55,35 @@
     &__list-elem {
         display: flex;
         gap: 20px;
+        align-items: center;
     }
     &__list-icon {
-        flex: 0 0 20px;
+        display: flex;
+        flex: 0 0 30px;
+        height: 30px;
+        svg {
+            width: 100%;
+            height: 100%;
+        }
     }
     &__list-text {
         font-size: 24px;
         font-weight: 500;
     }
-    &__image-wrapper {}
-    &__image {
+    &__image-wrapper {
         position: absolute;
         right: 0;
         bottom: 0;
         
         width: 550px;
         height: 600px;
-        object-fit: contain;
+        
         z-index: 3;
+    }
+    &__image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
     &__decor {
         position: absolute;
@@ -86,7 +97,7 @@
         }
     }
     &__right {
-        flex: 0 0 700px;
+        flex: 1 1 700px;
         padding: 80px;
 
         background-color: $white;
@@ -108,7 +119,7 @@
         @include borderGradient(2);
     }
     &__circle {
-        width: 10px;
+        flex: 0 0 10px;
         height: 10px;
         border-radius: 50%;
         background-color: $pink;
@@ -136,5 +147,165 @@
         font-size: 15px;
         color: #4D4D4D;
         text-align: center;
+    }
+}
+
+@include media ($desktop) {
+    .feedback {
+		&__container {}
+		&__left {
+            flex: 1 1 1100px;
+        }
+		&__title {}
+		&__text {
+			&_bold {}
+		}
+		&__list {}
+		&__list-elem {}
+		&__list-icon {}
+		&__list-text {}
+		&__image-wrapper {}
+		&__image {}
+		&__decor {}
+		&__right {
+            flex: 1 1 700px;
+        }
+		&__slab-wrapper {}
+		&__slab {}
+		&__circle {}
+		&__slab-text {}
+		&__form {}
+		&__input-wrapper {}
+		&__input {}
+		&__button {}
+		&__rights {}
+    }
+}
+
+@include media ($laptop) {
+    .feedback {
+		&__container {}
+		&__left {
+            justify-content: space-around;
+        }
+		&__title {
+            font-size: 36px;
+            line-height: 40px;
+        }
+		&__text {
+            font-size: 24px;
+			&_bold {}
+		}
+		&__list {}
+		&__list-elem {
+            
+        }
+		&__list-icon {}
+		&__list-text {
+            font-size: 20px;
+        }
+		&__image-wrapper {}
+		&__image {}
+		&__decor {}
+		&__right {}
+		&__slab-wrapper {}
+		&__slab {}
+		&__circle {}
+		&__slab-text {}
+		&__form {}
+		&__input-wrapper {}
+		&__input {}
+		&__button {}
+		&__rights {}
+    }
+}
+
+@include media ($tablet) {
+    .feedback {
+        margin-top: 50px;
+		&__container {}
+		&__left {
+            padding: 30px;
+        }
+		&__title {}
+		&__text {
+			&_bold {}
+		}
+		&__list {}
+		&__list-elem {}
+		&__list-icon {
+            flex: 0 0 20px;
+            height: 20px;;
+        }
+		&__list-text {}
+		&__image-wrapper {
+            display: none;
+        }
+		&__image {}
+		&__decor {}
+		&__right {
+            padding: 30px;
+        }
+		&__slab-wrapper {}
+		&__slab {}
+		&__circle {}
+		&__slab-text {}
+		&__form {}
+		&__input-wrapper {}
+		&__input {}
+		&__button {}
+		&__rights {}
+    }
+}
+
+@include media ($mobile) {
+    .feedback {
+		&__container {
+            flex-direction: column;
+        }
+		&__left {
+            flex: 0 0 auto;
+            min-height: auto;
+            padding: 50px 30px;
+        }
+		&__title {
+            font-size: 20px;
+            line-height: 21px;
+        }
+		&__text {
+            font-size: 15px;
+			&_bold {}
+		}
+		&__list {}
+		&__list-elem {}
+		&__list-icon {}
+		&__list-text {
+            font-size: 13px;
+        }
+		&__image-wrapper {
+            
+        }
+		&__image {}
+		&__decor {}
+		&__right {
+            flex: 0 0 auto;
+            padding: 35px 30px;
+        }
+		&__slab-wrapper {
+            gap: 10px;
+            max-width: 190px;
+        }
+		&__slab {}
+		&__circle {}
+		&__slab-text {
+            font-size: 10px;
+        }
+		&__form {}
+		&__input-wrapper {}
+		&__input {}
+		&__button {}
+		&__rights {
+            font-size: 11px;
+        }
     }
 }
