--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -7,9 +7,9 @@
         flex-direction: column;
         position: relative;
 
-        background: url(../../images/main-banner.png) no-repeat 50% 50%;
+        background: url(../images/main-banner.png) no-repeat 50% 50%;
         background-size: cover;
-        border-radius: 25px;
+        border-radius: 25px;  
 
         padding: 65px 75px;
 
@@ -37,6 +37,8 @@
     &__button {
         padding: 30px 70px;
         margin-top: 100px;
+
+        
     }
     &__social {
         position: absolute;
@@ -48,4 +50,95 @@
     display: flex;
     gap: 10px;
     &__elem {}
+}
+
+@include media($desktop) {
+    .hero {
+        &__container {}
+        &__wrapper {}
+        &__subtitle {}
+        &__title {}
+        &__text {}
+        &__button {}
+        &__social {}
+    }
+    .social {
+        &__elem {}
+    }
+}
+
+@include media($laptop) {
+    .hero {
+        &__container {}
+        &__wrapper {}
+        &__subtitle {}
+        &__title {
+        }
+        &__text {}
+        &__button {
+            font-size: 20px;
+        }
+        &__social {}
+    }
+    .social {
+        &__elem {}
+    }
+}
+
+@include media($tablet) {
+    .hero {
+        &__container {
+            padding: 0;
+        }
+        &__wrapper {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+            min-height: 110vh;
+            padding: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            background-position: 70% 50%;
+        }
+        &__subtitle {
+            font-size: 12px;
+        }
+        &__title {
+            font-size: 36px;
+            line-height: 40px;
+        }
+        &__text {
+            font-size: 20px;
+            line-height: 20px;
+        }
+        &__button {
+            font-weight: 400;
+            font-size: 16px;
+        }
+        &__social {
+            display: none;
+        }
+    }
+    .social {
+        &__elem {}
+    }
+}
+
+@include media($mobile) {
+    .hero {
+        &__container {}
+        &__wrapper {}
+        &__subtitle {}
+        &__title {}
+        &__text {}
+        &__button {
+            width: 100%;
+            max-width: 220px;
+            padding: 20px;
+        }
+        &__social {}
+    }
+    .social {
+        &__elem {}
+    }
 }
