--- a/src/scss/components/studios.scss
+++ b/src/scss/components/studios.scss
@@ -72,3 +72,88 @@
         background: linear-gradient(180deg, rgba(32, 32, 32, 0) 0%, rgba(31, 31, 31, 0.85) 90.74%);
     }
 }
+
+@include media($desktop) {
+    .studios {
+        &__grid {}
+        &__info {}
+        &__text {}
+        &__card {}
+    }
+    .studio {
+        &__title {}
+    }
+    .studio-card {
+        &_more {}
+        &__title {}
+        &__dot {}
+        &__text {}
+    }
+}
+
+@include media($laptop) {
+    .studios {
+        &__grid {}
+        &__info {}
+        &__text {
+            font-size: 18px;
+        }
+        &__card {}
+    }
+    .studio {
+        &__title {}
+    }
+    .studio-card {
+        &_more {}
+        &__title {
+            font-size: 24px;
+        }
+        &__dot {}
+        &__text {}
+    }
+}
+
+@include media($tablet) {
+    .studios {
+        margin-top: 50px;
+        &__grid {
+            grid-template-columns: 1fr;
+        }
+        &__info {
+            grid-column-end: 2;
+        }
+        &__text {
+            margin-top: 10px;
+        }
+        &__card {}
+    }
+    .studio {
+        &__title {}
+    }
+    .studio-card {
+        &_more {}
+        &__title {}
+        &__dot {}
+        &__text {}
+    }
+}
+
+@include media($mobile) {
+    .studios {
+        &__grid {}
+        &__info {}
+        &__text {}
+        &__card {}
+    }
+    .studio {
+        &__title {}
+    }
+    .studio-card {
+        &_more {}
+        &__title {
+            font-size: 20px;
+        }
+        &__dot {}
+        &__text {}
+    }
+}
