--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,3 +31,8 @@
 @import 'components/promo';
 @import 'components/benefits';
 @import 'components/feedback';
+
+@import 'components/about';
+@import 'components/why';
+@import 'components/map';
+@import 'components/equipment';
