--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,3 +36,11 @@
 @import 'components/why';
 @import 'components/map';
 @import 'components/equipment';
+
+@import 'components/faq';
+
+@import 'components/gallery';
+
+@import 'components/job';
+
+@import 'components/contacts';
