--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -1,4 +1,5 @@
 .about {
+    margin-top: 50px;
     &__container {}
     &__info {}
     &__title {}
@@ -14,6 +15,8 @@
     &__button {
         width: 100%;
         margin-top: 30px;
+
+        box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.1);
     }
 }
 .about-card {
