--- a/src/scss/components/feedback.scss
+++ b/src/scss/components/feedback.scss
@@ -75,7 +75,7 @@
         right: 0;
         bottom: 0;
         
-        width: 550px;
+        width: 560px;
         height: 600px;
         
         z-index: 3;
@@ -142,6 +142,12 @@
         border: none;
         width: 100%;
         cursor: pointer;
+    }
+    &__gradient-button {
+        position: relative;
+        z-index: 4;
+
+        padding: 30px 70px;
     }
     &__rights {
         font-size: 15px;
