--- a/src/scss/components/map.scss
+++ b/src/scss/components/map.scss
@@ -13,6 +13,9 @@
         margin-top: 100px;
         svg {
             width: 100%;
+            circle:nth-child(2n + 1) {
+                animation: hotspot 3s infinite;
+            }
         }
     }
 }
