--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -29,6 +29,10 @@ body {
     padding: 0 15px;
 }
 
+.no-scroll {
+    overflow-y: hidden;
+}
+
 @include media($desktop) {
     .container {
         max-width: 1440px;
