--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -2,6 +2,7 @@
 .gradient-button{
     position: relative;
     padding: 30px;
+    gap: 25px;
     background: #fff;
     text-decoration: none;
     font-size: 24px;
@@ -40,6 +41,14 @@
             border-radius: 0;
             transform: translateY(0) scaleY(1);
         }
+        .gradient-button__icon {
+            svg {
+                path {
+                    transition-delay: .1s;
+                    fill: $white;
+                }
+            }
+        }
     }
     &_active {
         transition: all .2s linear;
@@ -47,6 +56,27 @@
         &::before {
             border-radius: 0;
             transform: translateY(0) scaleY(1);
+        }
+        .gradient-button__icon {
+            svg {
+                path {
+                    fill: $white;
+                }
+            }
+        }
+    }
+    &__icon {
+        width: 35px;
+        height: 35px;
+        position: relative;
+        z-index: 4;
+        svg {
+            width: 100%;
+            height: 100%;
+            path {
+                fill: $black;
+                transition: .3s;
+            }
         }
     }
 }
@@ -136,7 +166,7 @@ a {
 }
 
 .section-text {
-    margin: 0;
+    margin: 20px 0 0 0;
     font-size: 24px;
     max-width: 1100px;
 }
@@ -192,4 +222,161 @@ a {
     .input {
         font-size: 13px;
     }
+}
+
+.accordion-button {
+    flex: 0 0 70px;
+    height: 70px;
+    position: relative;
+
+    border: none;
+
+    border-radius: 50%;
+    background-color: $white;
+
+    cursor: pointer;
+    &::before {
+        content: '';
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        width: 36px;
+        height: 3px;
+
+        transform: translate(-50%, -50%) rotate(90deg);
+        transform-origin: 50% 50%;
+        transition: .6s;
+
+        background-color: $black;
+    }
+    &::after {
+        content: '';
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        width: 36px;
+        height: 3px;
+
+        transform: translate(-50%, -50%) rotate(0deg);
+        transform-origin: 50% 50%;
+        transition: .6s;
+
+        background-color: $black;
+    }
+    &_active {
+        &::before {
+            transform: translate(-50%, -50%) rotate(-45deg);
+        }
+        &::after {
+            transform: translate(-50%, -50%) rotate(-315deg);
+        }
+    }
+    &_gradient {
+        background: $mainGradient;
+        &::before {
+            background-color: $white;
+        }
+        &::after {
+            background-color: $white;
+        }
+    }
+}
+
+.popup {
+    width: 100%;
+    max-width: 700px;
+    max-height: min-content;
+    overflow-y: auto;
+
+    background-color: $white;
+    border-radius: 25px;
+
+    padding: 80px;
+
+    position: relative;
+
+    &__overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        z-index: 10;
+        background-color: rgba(0, 0, 0, 0.7);
+        pointer-events: none;
+        opacity: 0;
+        visibility: hidden;
+        transition: .3s;
+
+        &_show {
+            pointer-events: all;
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+    
+    &__close {
+        width: 50px;
+        height: 50px;
+        
+        position: absolute;
+        top: 30px;
+        right: 30px;
+
+        background: $mainGradient;
+
+        border-radius: 50%;
+
+        cursor: pointer;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            width: 25px;
+            height: 2px;
+            background-color: white;
+
+            transform: translate(-50%, -50%) rotate(45deg);
+            transition: .3s;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            width: 25px;
+            height: 2px;
+            background-color: white;
+
+            transform: translate(-50%, -50%) rotate(-45deg);
+            transition: .3s;
+        }
+
+        &:hover {
+            &::before {
+                transform: translate(-50%, -50%) rotate(30deg);
+            }
+            &::after {
+                transform: translate(-50%, -50%) rotate(-60deg);
+            }
+        }
+    }
+}
+
+.feedback-popup {
+
 }
