--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,3 +44,8 @@
 @import 'components/job';
 
 @import 'components/contacts';
+
+@import 'components/blog';
+@import 'components/article';
+
+@import 'components/gallery-studios';
