--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,3 +49,7 @@
 @import 'components/article';
 
 @import 'components/gallery-studios';
+
+@import 'components/franchisees';
+@import 'components/franchisees-advantages';
+@import 'components/franchisees-cityes';
