--- a/src/scss/components/studios.scss
+++ b/src/scss/components/studios.scss
@@ -18,6 +18,13 @@
         margin-top: 30px;
     }
     &__card {}
+    &__lottie {
+        width: 200px;
+        position: relative;
+        right: 65px;
+        margin: -20px 0;
+        display: none;
+    }
 }
 .studio-card {
     position: relative;
@@ -141,12 +148,28 @@
             margin-top: 10px;
         }
         &__card {}
+        &__lottie {
+            display: block;
+        }
+        &__swiper {
+            width: 100%;
+        }
     }
     .studio {
         &__title {}
     }
     .studio-card {
-        &_more {}
+        padding-top: 50%;
+        &_more {
+            .studio-card {
+                &__text {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+            }
+        }
         &__title {}
         &__dot {}
         &__text {}
@@ -164,6 +187,7 @@
         &__title {}
     }
     .studio-card {
+        padding-top: 100%;
         &_more {}
         &__title {
             font-size: 20px;
